--- a/.github/workflows/corder_jp.yml
+++ b/.github/workflows/corder_jp.yml
@@ -26,7 +26,7 @@ jobs:
         
     - name: Install dependencies
       run: |
-        conda env update --file myenv.yml --name base
+        conda env update --file tareas/Cordero_Jp/myenv.yml --name base
     
     - name: Run script
       run: python -c "import pandas; print(pandas.__version__)"
